# Sonoteca

./: .gitignore  .prettierignore  CONTRIBUTING.md  README.md  docker-compose.yml  render.yaml  vercel.json
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_song_cover_url.py  0003_song_audio_url.py  0004_real_catalog_refs.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  auth.py  browse.py  catalog.py  demo.py  me.py  playlists.py  songs.py  stats.py
backend/app/core/: config.py  db.py  security.py
backend/app/integrations/: __init__.py  cache.py  deezer.py  musicbrainz.py  spotify.py
backend/app/models/: __init__.py  catalog.py  playlist.py  song.py  user.py
backend/app/schemas/: __init__.py  auth.py  me.py  playlists.py  songs.py
backend/app/services/: catalog_hydrate.py
backend/tests/: conftest.py  test_auth_flow.py  test_health.py
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  vercel.json
frontend/src/: styles.css
frontend/src/app/: App.tsx  BackendStatusBanner.tsx  Layout.tsx  Router.tsx
frontend/src/components/: AmbientMesh.tsx  AudioVisualizer.tsx  MobileNav.tsx  MotionBtn.tsx  PageHero.tsx  PageTransition.tsx  Sidebar.tsx  Toaster.tsx  TopBar.tsx  icons.tsx  media.tsx  motion.tsx
frontend/src/hooks/: useAudioAnalyser.ts
frontend/src/lib/: audioContext.ts
(+27 files in other folders)
