[project]
name = "sonoteca-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.139.0",
    "uvicorn==0.50.0",
    "SQLAlchemy==2.0.51",
    "alembic==1.18.5",
    "asyncpg==0.31.0",
    "pydantic-settings==2.14.2",
    "python-dotenv",
    "email-validator==2.3.0",
    "pyjwt==2.13.0",
    "libpass[bcrypt]==1.9.3",
    "bcrypt==5.0.0",
    "python-multipart==0.0.32",
    "httpx==0.28.1",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [".venv", "alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
exclude = "(^\\.venv/|^alembic/versions/)"
